2009-12-31 German Arias <german@xelalug.org>

	* ColorPickers/Spanish.lproj/StandardPicker.strings,
	* Resources/Spanish.lproj/Localizable.strings: Fixed incorrect characters.

2009-12-31 German Arias <german@xelalug.org>

	*  Resources/Spanish.lproj/Localizable.strings: Added.
	*  Resources/GNUmakefile: Added Spanish language.

2009-12-30 German Arias <german@xelalug.org>

	*  Panels/Spanish.lproj/GSDataLinkPanel.gorm,
	*  Panels/Spanish.lproj/GSPageLayout.gorm,
	*  Panels/Spanish.lproj/GSToolbarCustomizationPalette.gorm,
	*  Panels/Spanish.lproj/GSPrintPanel.gorm,
	*  Panels/Spanish.lproj/GSSpellPanel.gorm: Added.
	*  Panels/GNUmakefile: Added Spanish language.

2009-12-30 German Arias <german@xelalug.org>

	* ColorPickers/Spanish.lproj/StandardPicker.strings: Added.

2009-12-29 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSImageView.h: Clean up.
	* Source/NSImageView.m: Clean up and addition of cut/copy/paste
	methods, based on code by Nikolaus Schaller <hns@computer.org>.

2009-12-27 Quentin Mathe <quentin.mathe@gmail.com>

	* Headers/NSTableView.h
	* Source/NSTableView.m
	(-columnIndexesInRect:): Added new Mac OS 10.5 method.

2009-12-26 Riccardo Mottola <rmottola@users.sf.net>

	* Source/NSTextView.m: Corrected multi-line string constant
	* Source/NSCell.m: Corrected c99-ism

2009-12-23  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSTextView.m (-dealloc, -breakUndoCoalescing,
	-shouldChangeTextInRange:replacementString:): Implement coalescing
	of undo actions for typing events.

	* Source/NSTextView.m (-selectedRange): Prevent crash when the
	receiver has no layout manager.

2009-12-23  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSTableView.m (-mouseDown:): A single click into a cell
	of an unselected row can now change the cell's state even when the
	table view allows dragging.

2009-12-22 17:31-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSCell.m: Corrected documentation in GUI to reflect that